--- a/public/index.html
+++ b/public/index.html
@@ -118,7 +118,7 @@
           <p class="text-sm text-center text-white/70">
           <i class="fas fa-star text-amber-400"></i>
           Made By
-          <a href="https://t.me/Nine12fq" class="underline text-blue-400 font-extrabold mr-1">NineTwelve</a><span class="text-gray-400">——</span><a href="https://github.com/ShinWolf-Subject/ttdl5.git" class="underline text-blue-400 font-semibold ml-1">Source</a>
+          <a href="https://t.me/Nine12fq" class="underline text-blue-400 font-extrabold mr-1">NineTwelve</a><span class="text-gray-400">—</span><a href="https://github.com/ShinWolf-Subject/ttdl5.git" class="underline text-blue-400 font-semibold ml-1">Source</a>
           </p>
           <p class="text-white/50 text-sm text-center">
           <i class="fas fa-warning text-red-400"></i>
